cabal-version:       3.0
name:                Haskell-Markdown-HTML
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Arnav Pawar
maintainer:          arnav.ap.pawar@gmail.com
build-type:          Simple
extra-doc-files:     CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Proj
    hs-source-dirs:   src
    build-depends:    base ^>=4.17.0.0, parsec
    default-language: Haskell2010

executable Haskell-Markdown-HTML
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.17.0.0, Haskell-Markdown-HTML
    default-language: Haskell2010

test-suite Haskell-Markdown-HTML-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.17.0.0, Haskell-Markdown-HTML, HUnit
    default-language: Haskell2010